5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1650_2730.log
== TEST (2019-04-14 19:24:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if((x,y)>0):
	print(Superiores)
if((x,y)<0):
	print(Inferiores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if((x,y)>0):
TypeError: '>' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:26:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0) , (y > 0) ):
	print(Superiores)
if( (x < 0) , (y<0):
	print(Inferiores)
-- ERROR:
File "XXXX", line 6
    if( (x < 0) , (y<0):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:26:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0) , (y > 0) ):
	print(Superiores)
if( (x < 0) , (y < 0):
	print(Inferiores)
-- ERROR:
File "XXXX", line 6
    if( (x < 0) , (y < 0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:27:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y > 0) ):
	print(Superiores)
if( (x < 0),(y < 0):
	print(Inferiores)
-- ERROR:
File "XXXX", line 6
    if( (x < 0),(y < 0):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:27:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y > 0) ):
	print(Superiores)
if( (x < 0),(y < 0) ):
	print(Inferiores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:27:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y > 0) ):
	print(Superiores)
if( (x < 0),(y < 0) ):
	print(Inferiores)
-- EXECUTION TIME:
0.182768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2730/main.py", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:27:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y > 0) ):
	print(Superiores)
if( (x < 0),(y < 0) ):
	print(Inferiores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:29:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y >= 0) ):
	print(Superiores)
if( (x < 0),(y =< 0) ):
	print(Inferiores)
-- ERROR:
File "XXXX", line 6
    if( (x < 0),(y =< 0) ):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:29:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x > 0),(y >= 0) ):
	print(Superiores)
if( (x < 0),(y =< 0) ):
	print(Inferiores)
-- EXECUTION TIME:
0.170672
-- ERROR:
  File "/home/codebench/codes/1650/2730/main.py", line 6
    if( (x < 0),(y =< 0) ):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:31:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>=0),(y>0) ):
	print(Superiores)
if( (x>0), (y>=0) ):
	print(Superiores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:31:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>=0),(y>0) ):
	print(Superiores)
if( (x>0), (y>=0) ):
	print(Superiores)
-- EXECUTION TIME:
0.163943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2730/main.py", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:31:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>=0),(y>0) ):
	print(Superiores)
if( (x>0), (y>=0) ):
	print(Superiores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:31:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>=0),(y>0) ):
	print("Superiores")
if( (x>0), (y>=0) ):
	print("Superiores")
-- OUTPUT:
Superiores
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:32:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0),(y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:32:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0),(y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.150316
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:33:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0),(y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:33:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x,y)>0:
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- ERROR:
File "XXXX", line 4
    if( (x,y)>0:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:34:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x,y)>0 ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( (x,y)>0 ):
TypeError: '>' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:34:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0), (y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:35:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0), (y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.138988
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:35:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0), (y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.155153
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:40:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0), (y>0) ):
	print("Superiores")
if( (x<0) , (y>0) ):
	print("Superiores")
if( (x<0), (y<0) ):
	print("Inferiores")
if( (x>0),(y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.163365
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:40:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")
if( (x<0) , (y>0) ):
	print("Superiores")
if( (x<0) , (y<0) ):
	print("Inferiores")
if( (x>0) , (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Superiores
Inferiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:41:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.24585
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:41:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.261366
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:41:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.225525
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:41:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- EXECUTION TIME:
0.291127
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
Superiores
Inferiores
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:41:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Superiores
Inferiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:20:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if( (x>0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y>0) ):
	print("Superiores")

if( (x<0) , (y<0) ):
	print("Inferiores")

if( (x>0) , (y<0) ):
	print("Inferiores")

-- OUTPUT:
Superiores
Superiores
Inferiores
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
